remove hamburger icon from login.html

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div><span id="hamburger">☰</span></div>
+        <div><span id="hamburger"></span></div>
         <h1>Online Library</h1>
         <div class="theme-btn"><img src="./assets/light-theme.svg" alt="theme-icon"></div>
     </header>
